DRT-210 Phone accesibility - fixed inability to touch(click) menu on welcome page - set width of images to no more than max width of device - fixed signup button width - fixed first page not centering - improved footer - fixed first page not rendering correctly on iOS - improved styling

--- a/DailyReportWeb/Content/main.scss
+++ b/DailyReportWeb/Content/main.scss
@@ -4,8 +4,8 @@
 
 .full-page {
     position: relative;
-    height: 100vh;
     min-height: 620px;
+    height: 768px;
 }
 
 .hcenter {
@@ -21,6 +21,7 @@
         position: relative;
         top: 50%;
         transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
     }
 }
 
@@ -37,6 +38,10 @@
 .welcome-page {
 
     h1,
+    h2 {
+        font-weight: normal;
+    }
+
     h3 {
         font-weight: bold;
     }
@@ -47,13 +52,9 @@
         max-width: 680px;
         line-height: 1.6em;
         font-weight: normal;
-        font-size: 1.4em;
+        font-size: 1.2em;
         color: black;
         font-weight: 300;
-    }
-
-    .logo {
-        margin-bottom: 60px;
     }
 
     .jumbo {
@@ -66,6 +67,36 @@
     .welcome {
         padding-top: 65px;
         padding-bottom: 10px;
+        z-index: -1;
+
+        h1 {
+            font-weight: bold;
+        }
+
+        h4 {
+            font-weight: normal;
+        }
+    }
+
+    .report-summary {
+
+        .row {
+            margin: 0;
+            margin-top: 80px;
+            background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(238,238,238,0.45) 100%);
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(238,238,238,0.45)));
+            background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(238,238,238,0.45) 100%);
+            background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(238,238,238,0.45) 100%);
+            background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(238,238,238,0.45) 100%);
+            background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(238,238,238,0.45) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6eeeeee',GradientType=0 );
+        }
+
+        img {
+            max-width: 100%;
+            border-left: 1px solid #b13818;
+            border-right: 1px solid #b13818;
+        }
     }
 
     .public-menu {
@@ -77,13 +108,13 @@
     }
 
     .call-to-action {
-        margin-top: 60px;
-    }
 
-    .call-to-action a {
-        font-weight: bold;
-        font-size: 1.6em;
-        padding: 15px 25px;
+        a {
+            font-weight: bold;
+            font-size: 1.6em;
+            padding: 15px 25px;
+            white-space: normal;
+        }
     }
 
     .step-number {
@@ -101,8 +132,15 @@
 
     footer {
         margin-top: 50px;
-        padding-top: 10px;
+        margin-bottom: 50px;
+        padding-top: 30px;
         border-top: 1px solid #DDD;
+        font-weight: bold;
+
+        .logo {
+            width: 130px;
+            vertical-align: bottom;
+        }
     }
 }
 
@@ -291,9 +329,22 @@ div.disabled {
     }
 }
 
-
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+    .full-page {
+        height: 100vh;
+    }
+
+    .welcome-page {
+
+        .main-logo {
+            margin-bottom: 60px;
+        }
+
+        .call-to-action {
+            margin-top: 60px;
+        }
+    }
 }
 
 
